@@ -1,5 +1,9 @@
 2003-04-17 Jackson Harper <jackson@latitudegeo.com>
 
+	* ExternTypeRef.cs: external types are classrefs
+		
+2003-04-17 Jackson Harper <jackson@latitudegeo.com>
+
 	* PeapiTypeRef.cs: New file - base wrapper for type refs that are
 	just peapi types.
 	* PrimitiveTypeRef.cs: New file - A primitive type (char, int, string)
